tests/miniJava/neg/006222_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while else 0 ) { } } }
